# autobot

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
autobot/: __main__.py  api.py  constants.py  main.py  prompt.py  prompt_integration_test.py  schematic.py  schematic_test.py  snippet.py  transforms.py
autobot/refactor/: __init__.py  patch.py  patches.py  refactor.py
autobot/review/: __init__.py  review.py
autobot/schematics/assert_equals/: after.py  before.py
autobot/schematics/convert_to_dataclass/: after.py  before.py
autobot/schematics/keyword_only_arguments/: after.py  before.py
autobot/schematics/numpy_builtin_aliases/: after.py  autobot.json  before.py
autobot/schematics/print_statement/: after.py  before.py
autobot/schematics/sorted_attributes/: after.py  before.py
autobot/schematics/standard_library_generics/: after.py  before.py
autobot/schematics/unittest_to_pytest/: after.py  before.py
autobot/schematics/unnecessary_f_strings/: after.py  before.py
autobot/schematics/use_generator/: after.py  before.py
autobot/schematics/useless_object_inheritance/: after.py  before.py
autobot/utils/: cache.py  filesystem.py  getch.py
schematics/assert_equals/: autobot.json
schematics/convert_to_dataclass/: autobot.json
schematics/print_statement/: after.py  autobot.json  before.py
schematics/sorted_attributes/: autobot.json  before.py
schematics/standard_library_generics/: after.py  autobot.json  before.py
schematics/unnecessary_f_strings/: autobot.json  before.py
schematics/use_generator/: after.py  autobot.json  before.py
schematics/useless_object_inheritance/: after.py  autobot.json
tests/integration/: test_prompt.py
tests/unit/: test_schematic.py
