[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autobot-ml"
version = "0.0.16"
requires-python = ">=3.9"
description = "An automated code refactoring tool powered by GPT-3."
authors = [{ name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/charliermarsh/autobot"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [{ include = "autobot" }]
dependencies = [
    "colorama>=0.4.5",
    "openai>=0.23.0,<0.24.0",
    "python-dotenv>=0.21.0",
    "rich>=12.5.1",
]

[project.scripts]
autobot = "autobot.main:main"

[tool.uv]
dev-dependencies = [
    "black>=22.8.0",
    "isort>=5.10.1",
    "mypy>=0.981",
    "twine>=4.0.1",
    "ruff>=0.0.48",
]

[tool.ruff]
preview = true
extend-exclude = ["autobot/schematics"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["autobot"]
